Changing site defaults

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
+title: "Simon Johnston"
+description: "Thoughts, Projects and More"
+show_downloads: false
+
 theme: jekyll-theme-slate
 
 defaults:
