Started on a page

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-name: "Simon Johnston"
+title: "Simon Johnston"
 description: "Thoughts, Projects, and More"
 url: https://johnstonskj.github.io
 repository: https://github.com/johnstonskj/johnstonskj.github.io
 show_downloads: false
 timezone: America/Los_Angeles
 
+name: "Simon Johnston"
 email: johnstonskj@gmail.com
 github_username: johnstonskj
 
